Fix #23666: commons-io dependency not included in ivy.xml
This removes all imports of org.apache.commons.io classes and replaces them with
similar functionality.

git-svn-id: https://josm.openstreetmap.de/svn/trunk@19077 0c6e7542-c601-0410-84e7-c038aed88b3b